// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ProductFormService #createGroupProduct should create group product 1`] = `
Object {
  "chainId": "chainId_",
  "configSets": null,
  "createdAt": Any<String>,
  "groupId": "groupId_",
  "id": "test_ADMIN_PRODUCT_IT_GROUP_PRODUCT_ID_01",
  "isVisible": true,
  "parentId": "parentId_",
  "takeawayTax": 12,
  "tax": 27,
  "updatedAt": Any<String>,
  "variants": Array [
    Object {
      "availabilities": Array [
        Object {
          "dayFrom": "",
          "dayTo": "",
          "price": 1,
          "timeFrom": "",
          "timeTo": "",
          "type": "A",
        },
      ],
      "id": "test_GroupProductVariant_id_1",
      "isAvailable": true,
      "pack": Object {
        "size": 1,
        "unit": "GROUP_UNIT",
      },
      "position": 1,
      "price": 20,
      "refGroupPrice": 20,
      "variantName": Object {
        "de": null,
        "en": "VARIANT_NAME_1",
        "hu": null,
      },
    },
    Object {
      "availabilities": Array [
        Object {
          "dayFrom": "",
          "dayTo": "",
          "price": 2,
          "timeFrom": "",
          "timeTo": "",
          "type": "A",
        },
      ],
      "id": "test_GroupProductVariant_id_2",
      "isAvailable": true,
      "pack": Object {
        "size": 2,
        "unit": "GROUP_UNIT",
      },
      "position": 2,
      "price": 40,
      "refGroupPrice": 40,
      "variantName": Object {
        "de": null,
        "en": "VARIANT_NAME_2",
        "hu": null,
      },
    },
  ],
}
`;

exports[`ProductFormService #createProductExtendFormGroup should create group product extend form 1`] = `
Object {
  "configSets": Array [],
  "isVisible": "",
  "takeawayTax": "",
  "tax": "",
  "variants": Array [],
}
`;

exports[`ProductFormService #createProductExtendFormGroup should create unit product extend form 1`] = `
Object {
  "configSets": Array [],
  "isVisible": "",
  "laneId": "",
  "supportedServingModes": Array [],
  "variants": Array [],
}
`;

exports[`ProductFormService #createProductFormGroup should create product form 1`] = `
Object {
  "allergens": Array [],
  "configSets": Array [],
  "description": Object {
    "de": "",
    "en": "",
    "hu": "",
  },
  "image": "",
  "isVisible": "",
  "name": Object {
    "de": "",
    "en": "",
    "hu": "",
  },
  "productCategoryId": "",
  "productType": "",
  "variants": Array [],
}
`;

exports[`ProductFormService #createUnitProduct should create unit product 1`] = `
Object {
  "chainId": "chainId_",
  "configSets": null,
  "createdAt": Any<String>,
  "groupId": "groupId_",
  "id": "test_ADMIN_PRODUCT_IT_UNIT_PRODUCT_ID_01",
  "isVisible": true,
  "laneId": "laneId_",
  "parentId": "parentId_",
  "position": 1,
  "supportedServingModes": Array [
    "takeAway",
  ],
  "takeaway": true,
  "unitId": "unitId_",
  "updatedAt": Any<String>,
  "variants": Array [
    Object {
      "availabilities": Array [
        Object {
          "dayFrom": "",
          "dayTo": "",
          "price": 1.5,
          "timeFrom": "",
          "timeTo": "",
          "type": "A",
        },
      ],
      "id": "test_UnitProductVariant_id_1",
      "isAvailable": true,
      "pack": Object {
        "size": 1,
        "unit": "UNIT_UNIT",
      },
      "position": 1,
      "price": 30,
      "refGroupPrice": 30,
      "variantName": Object {
        "de": null,
        "en": "VARIANT_NAME_1",
        "hu": null,
      },
    },
    Object {
      "availabilities": Array [
        Object {
          "dayFrom": "",
          "dayTo": "",
          "price": 3,
          "timeFrom": "",
          "timeTo": "",
          "type": "A",
        },
      ],
      "id": "test_UnitProductVariant_id_2",
      "isAvailable": true,
      "pack": Object {
        "size": 2,
        "unit": "UNIT_UNIT",
      },
      "position": 2,
      "price": 60,
      "refGroupPrice": 60,
      "variantName": Object {
        "de": null,
        "en": "VARIANT_NAME_2",
        "hu": null,
      },
    },
  ],
}
`;

exports[`ProductFormService #updateGroupProduct should update group product and return value 1`] = `
Object {
  "chainId": "chainId_",
  "configSets": null,
  "createdAt": Any<String>,
  "groupId": "groupId_",
  "id": "test_ADMIN_PRODUCT_IT_GROUP_PRODUCT_ID_01",
  "isVisible": true,
  "parentId": "parentId_",
  "takeawayTax": 30,
  "tax": 33,
  "updatedAt": Any<String>,
  "variants": Array [
    Object {
      "availabilities": Array [
        Object {
          "dayFrom": "",
          "dayTo": "",
          "price": 1,
          "timeFrom": "",
          "timeTo": "",
          "type": "A",
        },
      ],
      "id": "test_GroupProductVariant_id_1",
      "isAvailable": true,
      "pack": Object {
        "size": 1,
        "unit": "GROUP_UNIT",
      },
      "position": 1,
      "price": 20,
      "refGroupPrice": 20,
      "variantName": Object {
        "de": null,
        "en": "VARIANT_NAME_1",
        "hu": null,
      },
    },
    Object {
      "availabilities": Array [
        Object {
          "dayFrom": "",
          "dayTo": "",
          "price": 2,
          "timeFrom": "",
          "timeTo": "",
          "type": "A",
        },
      ],
      "id": "test_GroupProductVariant_id_2",
      "isAvailable": true,
      "pack": Object {
        "size": 2,
        "unit": "GROUP_UNIT",
      },
      "position": 2,
      "price": 40,
      "refGroupPrice": 40,
      "variantName": Object {
        "de": null,
        "en": "VARIANT_NAME_2",
        "hu": null,
      },
    },
  ],
}
`;

exports[`ProductFormService #updateUnitProduct should update unit product and return value 1`] = `
Object {
  "chainId": "chainId_",
  "configSets": null,
  "createdAt": Any<String>,
  "groupId": "groupId_",
  "id": "test_ADMIN_PRODUCT_IT_UNIT_PRODUCT_ID_01",
  "isVisible": false,
  "laneId": "laneId_",
  "parentId": "parentId_",
  "position": 1,
  "supportedServingModes": Array [
    "inPlace",
  ],
  "takeaway": true,
  "unitId": "unitId_",
  "updatedAt": Any<String>,
  "variants": Array [
    Object {
      "availabilities": Array [
        Object {
          "dayFrom": "",
          "dayTo": "",
          "price": 1.5,
          "timeFrom": "",
          "timeTo": "",
          "type": "A",
        },
      ],
      "id": "test_UnitProductVariant_id_1",
      "isAvailable": true,
      "pack": Object {
        "size": 1,
        "unit": "UNIT_UNIT",
      },
      "position": 1,
      "price": 30,
      "refGroupPrice": 30,
      "variantName": Object {
        "de": null,
        "en": "VARIANT_NAME_1",
        "hu": null,
      },
    },
    Object {
      "availabilities": Array [
        Object {
          "dayFrom": "",
          "dayTo": "",
          "price": 3,
          "timeFrom": "",
          "timeTo": "",
          "type": "A",
        },
      ],
      "id": "test_UnitProductVariant_id_2",
      "isAvailable": true,
      "pack": Object {
        "size": 2,
        "unit": "UNIT_UNIT",
      },
      "position": 2,
      "price": 60,
      "refGroupPrice": 60,
      "variantName": Object {
        "de": null,
        "en": "VARIANT_NAME_2",
        "hu": null,
      },
    },
  ],
}
`;
